<resources>
    <string name="app_name">Mobi Lost </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="mobile_search">Mobile Search</string>
    <string name="name">Name</string>
    <string name="phone_num">Phone number</string>
    <string name="governorate">Governorate</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="email">Username or E-mail</string>
    <string name="add_photo">Add personal photo</string>
    <string name="country">Country</string>
    <string name="choose_photo">choose photo</string>
    <string name="create_acount">create account </string>
    <string name="faild"> failed </string>
    <string name="search_result">Search Results</string>
    <string name="empty_username">user name is empty</string>
    <string name="empty_password">password is empty</string>
    <string name="inv_email">invalid email address</string>
    <string name="empty_email">Enter Email Address </string>

    <string name="empty_phone">phone number is empty</string>
    <string name="empty_city">city number is empty</string>
    <string name="empty_country">country number is empty</string>
    <string name="empty_address">address number is empty</string>
    <string name="inv_phone">Invaild PhoneNumber</string>

    <string name="at_least_3ch">at least 3 characters</string>
    <string name="pass_bet_4_10">between 4 and 10 alphanumeric characters</string>
    <string name="title_3ch">at least 3 characters</string>
    <string name="city_at_3ch">at least 3 characters</string>
    <string name="address_at_3">at least 3 characters</string>
    <string name="login">Login...</string>
    <string name="find_phone">find phone</string>
    <string name="report">Report</string>
    <string name="imei">imei</string>
    <string name="brand">brand</string>
    <string name="owner">owner</string>
    <string name="statue">statue</string>
    <string name="descreption">description</string>
    <string name="add_phone_photo">add phone photo</string>
    <string name="send">Send</string>
    <string name="report_details">Report Detail</string>
    <string name="logout">Logout</string>
    <string name="no_result">No results found Do you want to report this mobile?</string>
    <string name="ok">ok</string>
    <string name="no">No</string>
    <string name="verfication_code">Verfication Code</string>
    <string name="a_message_will_appear_on_your_phone_by_barely_waiting_your_seconds">A message will appear on your phone by barely waiting your seconds</string>
    <string name="confirm">Confirm</string>
</resources>
