<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.SimiColon.MobileSearch.findphone.Activities.Activity_Register"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    android:scrollbars="none"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:id="@+id/photo_container"
            android:clickable="false"
            android:layout_marginTop="@dimen/_5sdp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_phone"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                app:civ_border_color="#00E5FF"
                app:civ_border_width="@dimen/_1sdp"
                android:src="@drawable/user_profile"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/image_bg"
                android:contextClickable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_phone_photo"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_5sdp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/photo_container"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            >

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
                android:background="@drawable/login_regis_btn"
                android:layout_marginBottom="@dimen/_5sdp"
                android:padding="5dp"
        app:fletPaddingLeft="@dimen/_5sdp"
        app:fletPaddingRight="@dimen/_5sdp"


        >
        <EditText
            android:id="@+id/edt_imei"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/imei"
            android:inputType="number"
            android:background="@color/white"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:gravity="center_vertical|left"
            android:textColorHint="@color/gray4"
            android:drawableLeft="@drawable/phone_icon"
            android:textSize="14sp"
            android:drawablePadding="@dimen/_5sdp"



            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_regis_btn"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="5dp"
        app:fletPaddingLeft="@dimen/_5sdp"
        app:fletPaddingRight="@dimen/_5sdp"
        >
        <EditText
            android:id="@+id/edt_brand"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/brand"
            android:background="@color/white"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:gravity="center_vertical|left"
            android:textColorHint="@color/gray4"
            android:drawableLeft="@drawable/phone_icon"
            android:textSize="14sp"
            android:drawablePadding="@dimen/_5sdp"
            android:textDirection="ltr"

            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_regis_btn"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="5dp"
        app:fletPaddingLeft="@dimen/_5sdp"
        app:fletPaddingRight="@dimen/_5sdp"
        >
        <EditText
            android:id="@+id/edt_owner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/owner"
            android:background="@color/white"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:gravity="center_vertical|left"
            android:textColorHint="@color/gray4"
            android:drawableLeft="@drawable/name_icon"
            android:textSize="14sp"
            android:drawablePadding="@dimen/_5sdp"

            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_regis_btn"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="5dp"
        app:fletPaddingLeft="@dimen/_5sdp"
        app:fletPaddingRight="@dimen/_5sdp"
        >
        <EditText
            android:id="@+id/edt_statue"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/statue"
            android:background="@color/white"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:gravity="center_vertical|left"
            android:textColorHint="@color/gray4"
            android:drawableLeft="@drawable/place_icon"
            android:textSize="14sp"
            android:drawablePadding="@dimen/_5sdp"

            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_regis_btn"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="5dp"
        app:fletPaddingLeft="@dimen/_5sdp"
        app:fletPaddingRight="@dimen/_5sdp"
        >
        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/phone_num"
            android:background="@color/white"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:gravity="center_vertical|left"
            android:textColorHint="@color/gray4"
            android:drawableLeft="@drawable/phone_icon"
            android:textSize="14sp"
            android:drawablePadding="@dimen/_5sdp"

            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_regis_btn"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="5dp"
        app:fletPaddingLeft="@dimen/_5sdp"
        app:fletPaddingRight="@dimen/_5sdp"
        >
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/email"
            android:background="@color/white"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:gravity="center_vertical|left"
            android:textColorHint="@color/gray4"
            android:drawableLeft="@drawable/email_icon"
            android:textSize="14sp"
            android:drawablePadding="@dimen/_5sdp"

            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_regis_btn"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="5dp"
        app:fletPaddingLeft="@dimen/_5sdp"
        app:fletPaddingRight="@dimen/_5sdp"
        >
        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:hint="@string/address"
            android:background="@color/white"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:gravity="center_vertical|left"
            android:textColorHint="@color/gray4"
            android:drawableLeft="@drawable/place_icon"
            android:textSize="14sp"
            android:drawablePadding="@dimen/_5sdp"

            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/login_regis_btn"
                android:layout_marginBottom="@dimen/_5sdp"
                android:padding="5dp"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"
                >
                <EditText
                    android:id="@+id/edt_desc"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"

                    android:hint="@string/descreption"
                    android:background="@color/white"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:gravity="center_vertical|left"
                    android:textColorHint="@color/gray4"
                    android:drawableLeft="@drawable/name_icon"
                    android:textSize="14sp"
                    android:drawablePadding="@dimen/_5sdp"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"

                />
    <Button
        android:id="@+id/btn_send"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_regis_btn"
        android:textColor="@color/colorPrimary"
        android:text="@string/send"
        android:textSize="16sp"
        android:clickable="true"
        />

</LinearLayout>

    </RelativeLayout>
    </ScrollView>

