<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.SimiColon.MobileSearch.findphone.Activities.Activity_Register"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    android:scrollbars="none"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:id="@+id/photo_container"
            android:clickable="false"
            android:layout_marginTop="@dimen/_5sdp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                app:civ_border_color="#00E5FF"
                app:civ_border_width="@dimen/_1sdp"
                android:src="@drawable/user_profile"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/image_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_5sdp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/photo_container"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            >
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:layout_marginBottom="@dimen/_5sdp"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"


                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_23sdp"
                    android:hint="@string/name"
                    android:background="@drawable/et_bg"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:gravity="center_vertical|left"
                    android:textColorHint="@color/white"
                    android:drawableLeft="@drawable/name_icon"
                    android:textSize="14sp"
                    android:drawablePadding="@dimen/_5sdp"



                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"
                android:layout_marginLeft="@dimen/_38sdp"
                />
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:layout_marginBottom="@dimen/_5sdp"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_23sdp"
                    android:hint="@string/phone_num"
                    android:background="@drawable/et_bg"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:gravity="center_vertical|left"
                    android:textColorHint="@color/white"
                    android:drawableLeft="@drawable/phone_icon"
                    android:textSize="14sp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:textDirection="ltr"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"
                android:layout_marginLeft="@dimen/_38sdp"

                />
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/et_bg"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_23sdp"
                    android:hint="@string/email"
                    android:background="@drawable/et_bg"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:gravity="center_vertical|left"
                    android:textColorHint="@color/white"
                    android:drawableLeft="@drawable/email_icon"
                    android:textSize="14sp"
                    android:drawablePadding="@dimen/_5sdp"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"
                android:layout_marginLeft="@dimen/_38sdp"

                />
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:layout_marginBottom="@dimen/_5sdp"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_23sdp"
                    android:hint="@string/governorate"
                    android:background="@drawable/et_bg"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:gravity="center_vertical|left"
                    android:textColorHint="@color/white"
                    android:drawableLeft="@drawable/place_icon"
                    android:textSize="14sp"
                    android:drawablePadding="@dimen/_5sdp"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"
                android:layout_marginLeft="@dimen/_38sdp"

                />
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:layout_marginBottom="@dimen/_5sdp"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_23sdp"
                    android:hint="@string/city"
                    android:background="@drawable/et_bg"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:gravity="center_vertical|left"
                    android:textColorHint="@color/white"
                    android:drawableLeft="@drawable/place_icon"
                    android:textSize="14sp"
                    android:drawablePadding="@dimen/_5sdp"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"
                android:layout_marginLeft="@dimen/_38sdp"

                />
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:layout_marginBottom="@dimen/_5sdp"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_23sdp"
                android:hint="@string/address"
                android:background="@drawable/et_bg"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:gravity="center_vertical|left"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/place_icon"
                android:textSize="14sp"
                android:drawablePadding="@dimen/_5sdp"

                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"
                android:layout_marginLeft="@dimen/_38sdp"

                />
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:layout_marginBottom="@dimen/_5sdp"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_23sdp"
                    android:hint="@string/username"
                    android:background="@drawable/et_bg"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:gravity="center_vertical|left"
                    android:textColorHint="@color/white"
                    android:drawableLeft="@drawable/name_icon"
                    android:textSize="14sp"
                    android:drawablePadding="@dimen/_5sdp"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"
                android:layout_marginLeft="@dimen/_38sdp"

                />
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:layout_marginBottom="@dimen/_5sdp"
                app:fletPaddingLeft="@dimen/_5sdp"
                app:fletPaddingRight="@dimen/_5sdp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_23sdp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:background="@drawable/et_bg"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:gravity="center_vertical|left"
                    android:textColorHint="@color/white"
                    android:drawableLeft="@drawable/pass_icon"
                    android:textSize="14sp"
                    android:drawablePadding="@dimen/_5sdp"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:background="#03A9F4"
                android:layout_marginLeft="@dimen/_38sdp"

                />
            <Button
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/login_regis_btn"
                android:textColor="@color/colorPrimary"
                android:text="@string/register"
                android:textSize="16sp"
                />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
